alterando estrutura do banco e a forma que recebe o json
