# app/Models/PerfilUsuario.php
@@ -1,15 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
-
-class PerfilUsuario extends Model
-{
-    use HasFactory;
-    protected $fillable = [
-        'usuario_id',
-        'perfil_id'
-    ];
-}
