# routes/api.php
@@ -19,11 +19,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 Route::post('login', 'App\Http\Controllers\AuthController@login');
 // Route::get('login', 'App\Http\Controllers\AuthController@index');
+// Route::apiResource('usuario', 'App\Http\Controllers\UsuarioController');
+
 
 Route::middleware('jwt.auth')->group(function(){
     // Route::apiresource('usuario', 'App\Http\Controllers\UsuarioController');
     Route::apiResource('usuario', 'App\Http\Controllers\UsuarioController');
-    Route::delete('login/{id}', 'App\Http\Controllers\AuthController@destroy');
+    // Route::delete('login/{id}', 'App\Http\Controllers\AuthController@destroy');
 });
 
 
